--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@roughrefine/brand": ["./packages/brand/src/index.ts"],
+      "@roughrefine/bisync": ["./packages/bisync/src/index.ts"],
+      "@roughrefine/bisync/*": ["./packages/bisync/src/*"]
     },
     "noImplicitAny": false,
     "noUnusedParameters": false,
